<resources>
    <string name="app_name">2Plo Messenger</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="borrar">Borrar</string>
    <string name="buscar_contactos">Buscar contactos</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="privacidad">Privacidad</string>
    <string name="acerca_de">Acerca de</string>
    <string name="compartir">Compartir</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="app_desarrollada_por_isaias_guzm_n_2plo_apps">App desarrollada por Isaias Guzmán - 2Plo Technologies SF</string>
    <string name="version_app">Versión 1.5.2.1</string>
    <string name="volver">Volver</string>
    <string name="buscador">Buscar usuarios</string>
    <string name="chats">Chats</string>
    <string name="posts">Posts</string>
    <string name="contactos">Contactos</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="cancelar">Cancelar</string>
    <string name="privacidad_titulo">Privacidad</string>
    <string name="ultima_conexion">Última conexión</string>
    <string name="ocultar_ultima_conexion">Ocultar última conexión</string>
    <string name="mostrar_ultima_conexion">Mostrar última conexión</string>
    <string name="datos">Datos</string>
    <string name="ocultar_ciudad">Ocultar ciudad</string>
    <string name="mostrar_ciudad">Mostrar ciudad</string>
    <string name="ocultar_imagen_de_perfil">Ocultar imagen de perfil</string>
    <string name="mostrar_imagen_de_perfil">Mostrar imagen de perfil</string>
    <string name="guardar">Guardar</string>
    <string name="welcome">Bienvenido a 2Plo Messenger</string>
    <string name="hintmail">Ingresa tu Email</string>
    <string name="hintpass">Ingresa tu contraseña</string>
    <string name="abrirregistro">¿Aún no tienes cuenta? Regístrate</string>
    <string name="showpass">Mostrar contraseña</string>
    <string name="loginbtn">Iniciar sesión</string>
    <string name="ingrese_su_nombre">El campo nombre no debe estar vacío ni debe ser mayor a 30 caracteres</string>
    <string name="ingrese_su_ciudad">El campo ciudad no debe estar vacío ni debe ser mayor a 50 caracteres</string>
    <string name="ingrese_su_genero">El campo género no debe estar vacío ni debe ser mayor a 10 caracteres</string>
    <string name="ingrese_su_edad">Ingrese su edad</string>
    <string name="ingrese_su_estado">El campo estado no debe estar vacío ni debe ser mayor a 140 caracteres</string>
    <string name="guardar_informacion">Guardar Información</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="edad">Edad</string>
    <string name="genero">Género</string>
    <string name="mi_estado">Mi estado</string>
    <string name="actualizar_informacion">Actualizar información</string>
    <string name="volver_miperfil">Volver</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="compartir_body">Te recomiendo esta aplicación: 2Plo Messenger.

    Descárgala aquí: https://play.google.com/store/apps/details?id=com.twoploapps.a2plomessenger</string>
    <string name="compartir_titulo">Compartir aplicación</string>
    <string name="compartir_con">Compartir con</string>
    <string name="ultima_conexion_chat">Última conexión:&#160;</string>
    <string name="activo">activo</string>
    <string name="imagenes">Imágenes</string>
    <string name="selecciionar_imagenes">Seleccionar Imagen</string>
    <string name="seleccionar_pdf">Seleccionar un archivo PDF</string>
    <string name="seleccionar_word">Seleccionar un archivo DOCX</string>
    <string name="seleccionar_video">Seleccionar un archivo MP4</string>
    <string name="enviando_imagen">Enviando imagen</string>
    <string name="estamos_enviando_imagen">Estamos enviando tu imagen</string>
    <string name="enviando_archivo">Enviando archivo</string>
    <string name="mensaje_enviado">Mensaje enviado</string>
    <string name="error_al_enviar">Error al enviar</string>
    <string name="seleccione_un_archivo">Seleccione un archivo</string>
    <string name="ingrese_mensaje">Por favor, ingrese un mensaje</string>
    <string name="inactivo">inactivo</string>
    <string name="ultima_conexion_fragment">Última conexión:&#160;</string>
    <string name="mensaje_post_vacio">Sube una imagen y/o escribe algo</string>
    <string name="confirma_post">Se publicó tu post</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="imgresa_nombre">Ingresa tu usuario</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="ingresa_password">Ingresa tu contraseña</string>
    <string name="introduce_el_nombre_de_usuario">Introduce el nombre de usuario</string>
    <string name="introduce_el_email">Introduce el Email</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="mostrar_contrase_a">Mostrar contraseña</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="registrarte">Registrarte</string>
    <string name="completa_perfil">Completa tu perfil</string>
    <string name="estado_default">Hola, estoy usando 2Plo Messenger</string>
    <string name="imagen_perfil">Imagen de perfil</string>
    <string name="estamos_guardando">Estamos guardando su foto de perfil…</string>
    <string name="imagen_guardada">Imagen guardada</string>
    <string name="imagen_se_guardo">Tu imagen está cargada</string>
    <string name="imagen_no_soportada">Imagen no es soportada. Inténtelo de nuevo</string>
    <string name="ingresa_nombre">Ingresa tu nombre</string>
    <string name="ingresa_ciudad">Ingresa tu ciudad</string>
    <string name="ingresa_genero">Ingresa tu género</string>
    <string name="ingresa_edad">Ingresa tu edad</string>
    <string name="ingresa_estado">Ingresa un estado</string>
    <string name="edad_insuficiente">No tienes la edad mínima para registrarte</string>
    <string name="guardando">Guardando tus datos</string>
    <string name="espere">Por favor, espere a que finalice el proceso</string>
    <string name="se_guardo">Datos guardados</string>
    <string name="cancelar_solicitud">Cancelar Solicitud</string>
    <string name="eliminar_contacto">ELIMINAR CONTACTO</string>
    <string name="aceptar_solicitud">ACEPTAR SOLICITUD</string>
    <string name="solictud_recibida">"Quiere contactar contigo…"</string>
    <string name="solicitud_de">Solicitud de:&#160;</string>
    <string name="nuevo_contacto">Nuevo Contacto Agregado</string>
    <string name="solicitud_eliminada">Solicitud Eliminada</string>
    <string name="enviada">ENVIADA</string>
    <string name="enviaste_solicitud">Enviaste una solicitud a:&#160;</string>
    <string name="cancelaste_la_solicitud">Cancelaste la solicitud</string>
    <string name="confirmacion_cancelar">¿Estás seguro de que deseas cancelar la solicitud?</string>
    <string name="escribir_mensaje">Escribir mensaje</string>
    <string name="buscar_amigos">Buscar Amigos</string>
    <string name="publicar_un_post">Publicar un post</string>
    <string name="todos_los_usuarios_de_la_app_pueden_ver_tus_posts">Solo tus contactos pueden ver tus posts</string>
    <string name="cargar_imagen">Cargar imagen</string>
    <string name="escribe_algo">Escribe algo</string>
    <string name="publicar">Publicar</string>
    <string name="postborrado">Se eliminó el post</string>
    <string name="editar">Editar</string>
    <string name="eliminar_mi">Eliminar para mí</string>
    <string name="eliminar_todos">Eliminar para todos</string>
    <string name="ver_img">Ver imagen</string>
    <string name="ver_vid">Ver video</string>
    <string name="descargar">Descargar y/o Ver</string>
    <string name="toasteliminado">¡Mensaje Eliminado!</string>
    <string name="toasteliminadoerror">¡Error al eliminar!</string>
    <string name="guardado_exitosamente">Guardado exitosamente.......</string>
    <string name="sereporto">Se reportó el post</string>
    <string name="etasseguropost">¿Estás seguro de que deseas eliminar el post?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="recibiostrikes">Ha recibido 5 strikes, No puede publicar posts.</string>
    <string name="entenido">Entendido</string>
    <string name="audio">Audio</string>
    <string name="seleccioinatipo">Selecciona el tipo de archivo</string>
    <string name="reproduciraudio">Reproducir audio</string>
    <string name="mostrar_ciudad_solo_a_mis_contactos">Mostrar ciudad solo a mis contactos</string>
    <string name="mostrar_imagen_de_perfil_solo_a_mis_contactos">Mostrar imagen de perfil solo a mis contactos</string>
    <string name="cargando_llamada">Cargando llamada…</string>
    <string name="new_call">Nueva llamada</string>
    <string name="join_call">Unirme a una llamada</string>
    <string name="nuevallamada">Nueva llamada</string>
    <string name="callcode">"Código de la videollamada:  "</string>
    <string name="indicacionesllamada">Copia este código y envíalo a los que quieres que se unan a la videollamada. Cuando estés listo, abre el menú, selecciona: Unirme a una llamada y pega el código de la videollamada.</string>
    <string name="secopio">Código copiado al portapapeles</string>
    <string name="copiarcodigo">Copiar</string>
    <string name="descartarcodigo">Descartar</string>
    <string name="codigodelavideollamada">Código de la llamada</string>
    <string name="intrduceelcodigodelallamada">Introduce el código de la videollamada:</string>
    <string name="unirse">Unirse</string>
    <string name="codigohint">Código de la videollamada</string>
    <string name="codigonovalido">Este código es incorrecto, introduzca uno válido</string>
    <string name="avandonastevideollamada">Saliste de la llamada</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="configuracion">Configuración</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="correoenviado">Se envió un correo para cambiar la contraseña</string>
    <string name="eliminar_cuenta">Eliminar mi cuenta</string>
    <string name="est_seguro_de_que_desea_eliminar_su_cuenta">¿Está seguro de que desea eliminar su cuenta?</string>
    <string name="nadie_podr_enviarle_mensajes_y_se_perder_n_todos_sus_datos">Nadie podrá enviarle mensajes y se perderán todos sus datos.</string>
    <string name="s_eliminar_mi_cuenta">Sí, eliminar mi cuenta</string>
    <string name="seeliminosucuenta">Tu cuenta fue eliminada</string>
    <string name="ocultar">Nadie</string>
    <string name="mostrar">Todos</string>
    <string name="solo_a_mis_contactos">Solo mis contactos</string>
    <string name="bloquear_screenshots">Bloquear screenshots</string>
    <string name="proteger_chats">Proteger chats con contraseña</string>
    <string name="mas_opciones">Más opciones</string>
    <string name="los_otros_usuarios_no_podran_tomar_screenshots_de_sus_conversaciones_contigo">Los otros usuarios no podrán tomar screenshots de sus conversaciones contigo</string>
    <string name="tambien_necesitaras_colocar_tu_contrase_a_para_acceder_a_privacidad">También necesitarás colocar tu contraseña para acceder a privacidad</string>
    <string name="en_2plo_messenger_no_toleramos_ning_n_intento_de_difamaci_n_y_no_permitimos_reportes_falsos_por_favor_explica_claramente_el_motivo_de_tu_reporte">En 2Plo Messenger no toleramos ningún intento de difamación y no permitimos reportes falsos. Por favor, explica claramente el motivo de tu reporte.</string>
    <string name="escribe_aqu_el_motivo_del_reporte">Escribe aquí el motivo del reporte…</string>
    <string name="enviar_reporte">Enviar Reporte</string>
</resources>