<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/buscar_contactos"
    android:id="@+id/buscar_contactos_menu"
    app:showAsAction="never">
</item>
<item
    android:title="@string/mi_perfil"
    android:id="@+id/miperfil_menu"
    app:showAsAction="never">
</item>

<item
    android:title="@string/privacidad"
    android:id="@+id/privacidad_menu"
    app:showAsAction="never">
</item>
<item
    android:title="@string/acerca_de"
    android:id="@+id/acerca_de_menu"
    app:showAsAction="never">
</item>
<item
    android:title="@string/compartir"
    android:id="@+id/compartir_menu"
    app:showAsAction="never">
</item>
<item
    android:title="@string/cerrar_sesion"
    android:id="@+id/cerrarsesion_menu"
    app:showAsAction="never">
</item>

</menu>