<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacidadActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacidad_titulo"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultima_conexion"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/ocultar_ultima_conexion"
                android:id="@+id/cb_hideseen"
                android:layout_margin="6dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/mostrar_ultima_conexion"
                android:id="@+id/cb_showseen"
                android:layout_margin="6dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_ciu">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/ocultar"
                android:id="@+id/cb_hideciu"
                android:layout_margin="6dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/mostrar"
                android:id="@+id/cb_showciu"
                android:layout_margin="6dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/solo_a_mis_contactos"
                android:id="@+id/cb_showcontactsciu"
                android:layout_margin="6dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagen_perfil"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_image">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/ocultar"
                android:id="@+id/cb_hideimage"
                android:layout_margin="6dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/mostrar"
                android:id="@+id/cb_showimage"
                android:layout_margin="6dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/solo_a_mis_contactos"
                android:id="@+id/cb_contactoimage"
                android:layout_margin="6dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mas_opciones"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/chk_bloquearscreenshots"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/bloquear_screenshots"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/los_otros_usuarios_no_podran_tomar_screenshots_de_sus_conversaciones_contigo"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/chk_proteccionchats"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/proteger_chats"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambien_necesitaras_colocar_tu_contrase_a_para_acceder_a_privacidad"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveprivacity"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_redondeado"
            android:backgroundTint="@color/fb_color"
            android:text="@string/guardar"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>