<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicarPostActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar_un_post"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todos_los_usuarios_de_la_app_pueden_ver_tus_posts"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/cargarimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whatsAppColor"

        android:text="@string/cargar_imagen"/>
    <ImageView
        android:id="@+id/verimg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/postedit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/escribe_algo"/>
    <Button
        android:id="@+id/publicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar"
        android:backgroundTint="@color/status_background"/>
</LinearLayout>