<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarEliminacionActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/est_seguro_de_que_desea_eliminar_su_cuenta"/>
<ImageView
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:src="@drawable/baseline_error_outline_24"
    android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nadie_podr_enviarle_mensajes_y_se_perder_n_todos_sus_datos"/>

    <Button
        android:id="@+id/btn_confirmar_eliminar_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_eliminar_mi_cuenta"/>

    <Button
        android:id="@+id/btn_cancelar_eliminar_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"/>
</LinearLayout>