<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPostsActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/updateimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whatsAppColor"
        android:text="@string/cargar_imagen"/>
    <ImageView
        android:id="@+id/imgpost"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/posttextedit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/escribe_algo"/>
    <Button
        android:id="@+id/updatepost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_informacion"
        android:backgroundTint="@color/status_background"/>
</LinearLayout>