<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiperfilActivity"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar_miperfil"
        layout="@layout/toolbar_principal" />

    <ScrollView
        android:id="@+id/mi_scroll_view12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_miperfil">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagen_miperfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/defaultprofilephoto"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"/>
    <EditText
        android:id="@+id/nombre_miperfil"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/imagen_miperfil"
        android:layout_marginTop="5dp"
        android:background="@drawable/textos"
        android:padding="8dp"
        android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/ciudad_miperfil"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/nombre_miperfil"
        android:layout_marginTop="5dp"
        android:background="@drawable/textos"
        android:padding="8dp"
        android:hint="@string/ciudad"
        android:inputType="text" />

    <EditText
        android:id="@+id/edad_miperfil"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/ciudad_miperfil"
        android:layout_marginTop="5dp"
        android:background="@drawable/textos"
        android:padding="8dp"
        android:hint="@string/edad"
        android:inputType="number"/>

    <EditText
        android:id="@+id/genero_miperfil"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/edad_miperfil"
        android:layout_marginTop="5dp"
        android:background="@drawable/textos"
        android:padding="8dp"
        android:hint="@string/genero"/>

    <EditText
        android:id="@+id/estado_miperfil"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/genero_miperfil"
        android:layout_marginTop="5dp"
        android:background="@drawable/textos"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/mi_estado"/>

    <Button
        android:id="@+id/boton_miperfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/estado_miperfil"
        android:layout_margin="20dp"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="@color/fb_color"
        android:textColor="@color/white"
        android:text="@string/actualizar_informacion"/>

    <Button
        android:id="@+id/atras_miperfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/boton_miperfil"
        android:background="@drawable/boton_redondeado"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:text="@string/volver_miperfil"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>