<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/chatbackground"
    android:padding="16dp">
    <!-- Título de la pantalla -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgconfig"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/defaultprofilephoto"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/nombreconfig"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="nombre"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"/>
                <ImageView
                    android:id="@+id/btneditarperfilconfig"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/baseline_edit_24"
                    android:visibility="visible"/>
            </LinearLayout>
            <TextView
                android:id="@+id/ciudadconfig"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="ciudad"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/estadoconfig"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="estado"
                android:textAlignment="textStart"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/solicitud_aceptar_boton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/aceptar"
                    android:textAllCaps="false"
                    android:layout_marginStart="10dp"
                    android:visibility="gone"
                    android:background="#4CAF50"/>
                <Button
                    android:id="@+id/solicitud_caneclar_boton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/rechazar"
                    android:textAllCaps="false"
                    android:layout_marginStart="15dp"
                    android:visibility="gone"
                    android:background="#DF190A"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- Opción Cambiar Contraseña -->
    <TextView
        android:id="@+id/opcion_cambiar_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrasena"
        android:textSize="18sp"
        android:padding="16dp" />

    <!-- Opción Privacidad -->
    <TextView
        android:id="@+id/opcion_privacidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacidad"
        android:textSize="18sp"
        android:padding="16dp" />

    <!-- Opción Acerca de -->
    <TextView
        android:id="@+id/opcion_acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        android:textSize="18sp"
        android:padding="16dp" />

    <!-- Opción Cerrar Sesión -->
    <TextView
        android:id="@+id/opcion_cerrar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textSize="18sp"
        android:padding="16dp" />
    <Button
        android:id="@+id/volverainicioconfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/status_background"
        android:background="@drawable/boton_redondeado"
        android:textColor="@color/white"
        android:padding="16dp"/>
</LinearLayout>
